Assignment saved again

--- a/notebooks/model_training_evaluation.ipynb
+++ b/notebooks/model_training_evaluation.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "13b2a08d-111d-416b-8184-5b16a5253192",
    "metadata": {},
    "outputs": [],
@@ -614,8 +614,16 @@
     "# Save the model\n",
     "rf_model_path = os.path.join(model_path, \"rf_model.pkl\")\n",
     "with open(rf_model_path, \"wb\") as model_path_rf:\n",
-    "    pickle.dump(rf, model"
+    "    pickle.dump(rf, model_path_rf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c349d006-0a96-428b-a48b-41c0fd2be337",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
